# reviews-nlp

./: .gitignore  notbook.ipynb  pyproject.toml  readme.md
