[tool.poetry]
name = "reviews-nlp"
version = "0.1.0"
description = ""
authors = ["Gabriel C <gabriel.chaiix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
seaborn = "^0.13.2"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
transformers = {extras = ["torch"], version = "^4.45.1"}
torch = "^2.4.1"
flask = "^3.0.3"
scikit-learn = "^1.5.2"
torchvision = "^0.19.1"
flask-ngrok = "^0.0.25"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
